--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
         <div id="pokemon-list" class="pokemon-grid"></div>
     </main>
 
+        <!-- Reproductor de música -->
+    <audio id="background-music" autoplay loop>
+        <source src="music.mp3" type="audio/mpeg">
+        Tu navegador no soporta el elemento de audio.
+    </audio>
+
+    <!-- Botón de silenciar -->
+    <button id="mute-button" class="mute-button">
+        🔈
+    </button>
+
     <!-- Modal para detalles del Pokémon -->
     <div id="pokemon-modal" class="modal">
         <div class="modal-content">
